// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'(1) nested expression in template lit…' > expectation 1`] = `
"import { Combobox } from "@headlessui/react";

export default function ClassNameCb() {
  return (
    <Combobox.Option
      className={({ active }) =>
        \`relative cursor-default select-none py-2 pl-10 pr-4 \${
          active ? "bg-teal-600 text-white" : "text-gray-900"
        }\`
      }
      value={"test"}
    ></Combobox.Option>
  );
}
"
`;

exports[`'(2) double nested expression in templ…' > expectation 1`] = `
"export default function ClassNameCb() {
  return (
    <Combobox.Option
      className={({ active }) =>
        \`relative cursor-default select-none py-2 pl-10 pr-4 \${
          active
            ? \`bg-teal-600
              \${active ? "bg-teal-600 text-white" : "text-gray-900"} text-white\`
            : "text-gray-900"
        }\`
      }
      value={"test"}
    ></Combobox.Option>
  );
}
"
`;
